# Dev-Backend

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  index.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 001_backend_tables.py  002_tracked_projects.py  003_user_username.py  004_user_avatar_url.py  005_user_social_handles.py  006_subscription_plans.py
api/: index.py
app/: __init__.py  main.py
app/api/: router.py
app/core/: config.py  constants.py  database.py  logger.py  security.py  tracked_constants.py
app/integrations/: supabase_client.py
app/middleware/: auth_middleware.py  logging_middleware.py  rate_limit_middleware.py
database/: add_subscription_plans.sql  add_user_avatar_url.sql  add_user_social_handles.sql  add_user_username.sql  backend_schema.sql  tracked_projects_schema.sql
infra/: .gitignore  package-lock.json  package.json
scripts/: check_endpoints.py  deploy-aws.sh  generate_project_embeddings.py  init_supabase.py  probe_pooler.py  setup-aws-secrets.sh  setup_database.py  test_postgres_connection.py  verify_tables.py
supabase_migrations/: ai_chat_history.sql  pgvector_semantic_search.sql
tests/: conftest.py  test_admin_routes.py  test_admin_schema.py  test_auth_routes.py  test_auth_schemas.py  test_hackathon_status.py  test_hackathon_url.py  test_health.py  test_password_reset_service.py  test_payment_pages.py  test_security.py  test_social_utils.py  test_subscription_constants.py  test_supabase_user_repository.py  test_username_utils.py
(+69 files in other folders)
